--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -268,6 +268,7 @@ button {
 /* HOME */
 .home_container {
   gap: 1rem;
+  min-height: 100vh;
 }
 
 .home_content {
@@ -373,7 +374,9 @@ button {
 .button--flex {
   display: inline-flex;
   align-items: center;
+  justify-content: center;
   gap: 0.3rem;
+  width: 238px;
 }
 
 /* ABOUT */
