--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -838,7 +838,17 @@ button {
     grid-template-columns: 0.6fr;
     justify-content: center;
   }
+
+
 }
+
+@media (max-width: 568px) {
+  .project_buttons {
+    display: flex;
+    justify-content: center;
+  }
+}
+
 
 @media screen and (min-width: 768px) {
   .container {
