--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1080,6 +1080,8 @@ button {
 .skills__logo {
   width: 2.5rem;
   height: 2.5rem;
+  background-color: #ffffff;
+  border-radius: 0.5rem;
 }
 
 .skills__logo img {
